# Virtual_Disk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VirtualFileSystem.cpp  VirtualFileSystem.h  build.sh  disk.vd  main.cpp  test.sh  vfs
